<resources>
    <string name="app_name">Homework_5</string>
    <string name="log_in">Log in</string>
    <string name="register">register</string>
    <string name="photo">photo</string>
    <string name="register_upper_char">Register</string>
    <string name="your_mail">your mail</string>
    <string name="your_password">your password</string>
    <string name="next">next</string>
    <string name="your_username">your username</string>
    <string name="policy">By signing up, you agree to Photo’s <u>Terms of Service</u> and <u>Privacy Policy.</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="login_upper_char">Log in</string>
    <string name="text_to_change">text to change</string>
</resources>