<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/register2BackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="@color/white"
        android:src="@drawable/btn_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/register_upper_char"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_field"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/your_username"
        android:padding="17dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register2SignUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_register"
        android:fontFamily="@font/roboto_bold"
        android:letterSpacing="0.04"
        android:paddingVertical="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/policy"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        android:textSize="13sp"/>


</androidx.appcompat.widget.LinearLayoutCompat>